@@ -85,7 +85,8 @@ production.
   a security fix (bug 42202).
 * Added the ability to limit the wall clock time used by shell processes,
   as well as the CPU time. Configurable with $wgMaxShellWallClockTime.
-* Added $wgWhitelistReadRegexp for regex whitelisting
+* Added $wgWhitelistReadRegexp for regex whitelisting.
+* (bug 43915) New maintenance script deleteEqualMessages.php.
 
 === Bug fixes in 1.21 ===
 * (bug 40353) SpecialDoubleRedirect should support interwiki redirects.
